# outguess

./: .gitignore  CONTRIBUTING.md  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  README-FIRST  README.md  STIRMARK-README  TODO  arc.c  arc.h  autogen.sh  bitmap.h  config.h.bot  config.h.in  configure  configure.ac  configure.in  fourier.c  fourier.h  golay.c  golay.h  histogram.c  image.h  iterator.c  iterator.h  jpeg-6b-steg.diff  jpg.c  jpg.h  md5c.c  outguess.1  outguess.c  outguess.h  pnm.c  pnm.h  seek_script  seek_script.1
.github/workflows/: full-check.yml
CVS/: Entries  Repository  Root
doc/: LICENSE.golay  README.jpeg-diff  STIRMARK-README  UPDATE-CHECK  jpeg-6b-steg-newer.diff
jpeg-6b-steg/: jcdctmgr.c  jdcoefct.c  jdhuff.c  jerror.c
jpeg-6b-steg/CVS/: Entries  Repository
jpeg-9c/: jconfig.cfg~
man/: create-man.sh  outguess.1  outguess.txt  seek_script.1  seek_script.txt
missing/: err.c  err.h  md5.c  md5.h
missing-files/: md5.c
missing/CVS/: Entries  Repository
src/: Makefile.am  arc.c  err.c  err.h  fourier.c  fourier.h  golay.c  iterator.c  iterator.h  jpg.c  jpg.h  outguess.c  outguess.h  pnm.c  pnm.h  seek_script
src/missing/: md5.c
test/: message.txt  test.sh
tests/: LICENSE  Makefile.am  embed_extract.sh  embed_extract_jpg.sh  embed_extract_pnm.sh  embed_extract_ppm.sh  test.ppm  test_seek.sh
